为机器添加了新版物品栏GUI